@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    - fix broken test caused by running an autogenerated test in situ and
+      confusing FindBin horribly
 
 0.03      2013-09-25 04:33:08Z (Karen Etheridge)
     - re-release with fixed compile test
